<resources>
    <string name="app_name">Money Run</string>
    <string name="EMAIL_HINT">Email</string>
    <string name="PASSWORD_HINT">Password</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="menu_home">Profile</string>
    <string name="Start_game">New game</string>
    <string name="login_page_login_button_text">Login</string>
    <string name="login_page_email_input_hint">Email address</string>
    <string name="login_page_password_input_hint">Password</string>
    <string name="title_activity_login">Login page</string>
    <string name="friend_list_button_text">Friend list</string>

    <string name="menu_main_leaderboard_button_text">Main Leaderboard</string>
    <string name="menu_main_weather_placeholder_text">coin placeholder</string>
    <string name="leaderboard_header_position">Position</string>
    <string name="leaderboard_header_name">Name</string>
    <string name="leaderboard_header_score">Score</string>
    <string name="leaderboard_to_menu_button">Back to Menu</string>

    <string name="login_page_signup_button_text">Sign up</string>
    <string name="go_back_to_main_menu">Go back to Main Menu</string>
    <string name="profile_never_created">You have no profile, logout then back in to create one</string>
    <string name="profile_creation_chose_name">Chose your username</string>
    <string name="submit">submit</string>
    <string name="join_game">Join Game</string>
    <string name="open_games">Open Games</string>
    <string name="new_game">New Game</string>

    <string name="join_game_message">Join</string>
    <string name="join_game_full_message">Full</string>
    <string name="join_game_filter_message">Search game</string>
    <string name="join_game_filter_button">Filter</string>
    <string name="game_name_display">%1$s</string>
    <string name="game_player_number_display">%1$d / %2$d</string>
    <string name="join_game_lobby_intent_extra_id">currentGameId</string>
    <string name="join_game_lobby_intent_extra_user">currentUser</string>
    <string name="join_game_lobby_intent_extra_type_user">UserTypeCurrentUser</string>


    <string name="lobby_player_missing">Players missing: %1$d</string>

    <string name="database_games">games</string>
    <string name="database_open_games_players">players</string>
    <!--
    Here are defined all the attribute names in the database!
    -->

    <!-- PLAYER -->

    <!-- GAME -->
    <string name="database_game">games</string>
    <string name="database_game_is_visible">isVisible</string>
    <string name="database_game_max_player_count">maxPlayerCount</string>
    <string name="database_game_name">name</string>
    <string name="database_game_players">players</string>
    <string name="database_game_start_location">startLocation</string>

    <!-- LOCATION -->
    <!-- End Game -->
    <string name="end_game_score_show">  You have gathered %1$d coins\nfor a total score of %2$d</string>
    <string name="end_game_score_failed">Unfortunately the coin you collected have been lost</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="answer_1">A</string>
    <string name="answer_2">B</string>
    <string name="answer_3">C</string>
    <string name="answer_4">D</string>
    <string name="mapbox_access_token">pk.eyJ1IjoibW9uZXlydW4iLCJhIjoiY2ttdnNxMzFuMDgzdTJvbjFwaWRjdmV3ZiJ9.R-YeQNFQsgZurdrzhNEIhA</string>
    <string name="map_score_text">Score: %1$d</string>
    <string name="map_in_game_scores">Leaderboard</string>

    <string name="offline_end_progress_success">Map downloaded successfully.</string>
    <string name="offline_map_deleted">Older maps deleted successfully.</string>
    <string name="no_offline_regions">No downloaded maps.</string>
    <string name="found_offline_regions">Found one downloaded map.</string>
    <string name="tile_limit_exceeded">Tile limit exceeded download failed.</string>

    <string name="offline_map_name">offline map</string>

    <string name="user_location_permission_explanation">This app needs location permissions in order to work.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>

    <string name="log_out">Log out</string>
    <string name="collect_coin">Collect coin</string>
    <string name="continue_run">Continue run</string>
    <string name="CorrectAnswerMessage">You are correct!</string>
    <string name="incorrect_answer_message">You are incorrect!\n The answer was </string>
    <string name="emptyString" />
    <string name="button_to_leave_game_description">button to leave game</string>
    <string name="game_results_button_text">Game Results</string>
    <string name="game_lobby_title">Game Lobby</string>
    <string name="players_in_lobby_message">Players in this lobby :</string>
    <string name="players_missing_message">Missing players :</string>
    <string name="leave_button_text">Leave</string>
    <string name="launch_game_button_text">Launch game</string>
    <string name="guest_button_text">Guest</string>
    <string name="for_offline_mode_description">(For offline mode)</string>
    <string name="cross">x</string>
    <string name="submit_button_text">Submit</string>
    <string name="image_on_top_of_join_game_description">Image on top of join game</string>
    <string name="game_name_prompt_text">Game name</string>
    <string name="game_max_players_prompt_text">Max player count</string>
    <string name="submit_game_text">Submit</string>
    <string name="question_title_text">Question</string>
    <string name="wrong_answer_cross">X</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="newGameNumCoinsText">Number of coins</string>
    <string name="newGameDurationText">Duration of the game in minutes</string>
    <string name="newGameRadiusText">Radius of the game in meters</string>
    <string name="delete_button_text">Delete</string>

    <string name="add_friend_tag_0">userState</string>
    <string name="add_friend_tag_1">requestedUserId</string>
    <string name="add_friend_button_follow_text">Follow</string>
    <string name="add_friend_button_unfollow_text">Unfollow</string>
    <string name="add_friend_button_search">Search name</string>
    <string name="add_friend_button_search_user">Search user</string>
    <string name="add_friend_button_go_back">Go back to friend list</string>
    <string name="friend_button_search">Search friends</string>

    <string name="friend_list_logo_n_played">Number of games played 🏃 </string>
    <string name="friend_list_logo_max_score">Max score 💯</string>
    <string name="friend_list_join_game_text">Join friend</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="download_map">Download Map</string>
    <string name="money_run">Money Run</string>
    <string name="name">Name</string>

    <!-- Help PopUp  -->
    <string name="how_to_play">How to play</string>
    <string name="X_close_window">X</string>
    <string name="turn_on_location">- Turn on your Location</string>
    <string name="join_or_create_lobby">- You can join or create your own lobby</string>
    <string name="when_game_launches">- When the game launches, run towards the coins</string>
    <string name="you_will_question">- You will be asked a question when you reach a coin, get it right to earn the coin</string>
    <string name="be_faster">- Be faster than the other players, there are only so many coins!</string>
    <string name="black_ground">black ground</string>
    <string name="golden_coin">golden coin</string>
    <string name="money_run_main_app_title">Money run, main app title</string>
    <string name="silhouette_of_man_running">Silhouette of man running</string>
    <string name="swipe_from_left_to_right_on_menu_to_see_additional_features">- Swipe from left to right on menu to see additional features</string>
    <string name="infomation_button">information button</string>
    <string name="careful_if_you_pickup_a_coin_outside_the_ring_you_will_die">- Careful, if you try to pickup a coin outside the ring you will lose</string>
    <string name="coins_are_placed_randomly_so_it_is_best_to_play_in_an_open_area">- Coins are placed randomly, so it is best to play in an open area</string>
    )))

</resources>