<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="476dp"
    android:padding="5dp"
    android:background="@drawable/layout_rounded"
    android:orientation="vertical">

    <Button
        android:id="@+id/txtclose"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end"
        android:background="#FF8A80"
        android:gravity="center"
        android:text="@string/X_close_window"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="112dp"
        android:text="@string/swipe_from_left_to_right_on_menu_to_see_additional_features"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="247dp"
        android:text="@string/join_or_create_lobby"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="74dp"
        android:text="@string/turn_on_location"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/how_to_play"
        android:textSize="24sp"
        tools:ignore="RelativeOverlap" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="96dp"
        android:text="@string/you_will_question"
        android:textSize="18sp" />

    <TextView
        android:layout_width="345dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="394dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="-2dp"
        android:text="@string/be_faster"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="174dp"
        android:text="@string/when_game_launches"
        android:textSize="18sp"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>
