<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ask_question_popup"
    android:layout_width="100dp"
    android:layout_height="300dp"
    android:background="@drawable/layout_rounded"
    android:fadingEdge="horizontal|vertical">


    <ScrollView
        android:layout_width="2000dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:tag="rr"
                android:text="Question"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/question_choice_1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_1" />

                <Button
                    android:id="@+id/question_choice_2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_2" />

                <Button
                    android:id="@+id/question_choice_3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_3" />


                <Button
                    android:id="@+id/question_choice_4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_4" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>