<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/main_leaderboard_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="17dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/leaderboard_header_position"
            android:textSize="20sp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"

            android:layout_marginTop="4dp"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="4dp"
            android:text="@string/leaderboard_header_score"
            android:textSize="20sp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"

            android:layout_marginTop="4dp"
            android:layout_marginEnd="152dp"
            android:layout_marginBottom="4dp"
            android:text="@string/leaderboard_header_name"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/main_leaderboard_header"
        android:scrollbars="vertical">

        <ListView
            android:id="@+id/ldblistView"
            android:layout_width="match_parent"
            android:layout_height="462dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="104dp">

        </ListView>

        <Button
            android:id="@+id/back_from_main_leaderboard_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="162dp"
            android:layout_marginEnd="162dp"
            android:layout_marginBottom="26dp"
            android:text="@string/back_to_menu" />


    </RelativeLayout>

</RelativeLayout>

