<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/correct_answer_popup"
    android:layout_width="100dp"
    android:layout_height="300dp"
    android:background="@drawable/layout_rounded"
    android:fadingEdge="horizontal|vertical">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/question"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:text="@string/question_title_text"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/incorrect_answer_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:text="@string/CorrectAnswerMessage"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/collect_coin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/collect_coin" />

    </LinearLayout>

</RelativeLayout>